[gd_scene load_steps=18 format=3 uid="uid://0hahdiffjt61"]

[ext_resource type="Script" uid="uid://ttvprfi61vn4" path="res://Game Elements/ui/hud.gd" id="1_6fbih"]
[ext_resource type="Script" uid="uid://bs428146shl5s" path="res://Game Elements/ui/time_fabric_animation.gd" id="2_bjfho"]
[ext_resource type="Texture2D" uid="uid://bxmiq87nvpvj8" path="res://art/notification.png" id="2_gp50j"]
[ext_resource type="Texture2D" uid="uid://ch4g2j4jycixb" path="res://art/time_fabric.png" id="3_6fbih"]
[ext_resource type="Script" uid="uid://d36yo1gmy8tkb" path="res://Game Elements/ui/cooldown_bar_1.gd" id="5_kgqo6"]
[ext_resource type="Texture2D" uid="uid://dj6erg8qveqb0" path="res://art/ninja_2.png" id="5_p8pfh"]
[ext_resource type="Texture2D" uid="uid://ds6fo2yfcafce" path="res://art/ninja_1.png" id="6_gp50j"]
[ext_resource type="Shader" uid="uid://dtp2e4p3wbgyp" path="res://Game Elements/ui/special_cooldown.gdshader" id="8_gp50j"]
[ext_resource type="Texture2D" uid="uid://kdaw8in4wo0" path="res://art/weapons/crossbow/crossbow_bright.png" id="9_gp50j"]
[ext_resource type="PackedScene" uid="uid://bsol6opkpit8y" path="res://Game Elements/ui/health_bar.tscn" id="10_sjf6p"]

[sub_resource type="LabelSettings" id="LabelSettings_t1xeu"]
font_size = 35

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sjf6p"]
shader = ExtResource("8_gp50j")
shader_parameter/u_speed = 0.5
shader_parameter/u_color_low = Color(0, 0, 0, 1)
shader_parameter/u_color_mid_red = Color(0.36750364, 0.0016963201, 0.6819386, 1)
shader_parameter/u_color_high = Color(0.9880591, 0.7400065, 1, 1)
shader_parameter/scale = 24.0
shader_parameter/progress = 0.0
shader_parameter/interp_time = 0.25
shader_parameter/time_offset = 0.0
shader_parameter/prev_progress = 0.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bjfho"]
bg_color = Color(0.38210395, 0.030576311, 0.5883771, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6fbih"]
bg_color = Color(0.6858206, 0.29710156, 0.98195356, 1)

[sub_resource type="Theme" id="Theme_gferk"]
resource_local_to_scene = true
Label/colors/font_color = Color(0.69411767, 0.32156864, 0.9843137, 1)
Label/font_sizes/font_size = 40
ProgressBar/styles/background = SubResource("StyleBoxFlat_bjfho")
ProgressBar/styles/fill = SubResource("StyleBoxFlat_6fbih")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gp50j"]
shader = ExtResource("8_gp50j")
shader_parameter/u_speed = 0.5
shader_parameter/u_color_low = Color(0, 0, 0, 1)
shader_parameter/u_color_mid_red = Color(0.73857963, 0.40337113, 0, 1)
shader_parameter/u_color_high = Color(1, 0.8032116, 0.5074572, 1)
shader_parameter/scale = 24.0
shader_parameter/progress = 0.0
shader_parameter/interp_time = 0.25
shader_parameter/time_offset = 0.0
shader_parameter/prev_progress = 0.0

[sub_resource type="Theme" id="Theme_gp50j"]
resource_local_to_scene = true
Label/colors/font_color = Color(0.69411767, 0.32156864, 0.9843137, 1)
Label/font_sizes/font_size = 40
ProgressBar/styles/background = SubResource("StyleBoxFlat_bjfho")
ProgressBar/styles/fill = SubResource("StyleBoxFlat_6fbih")

[node name="Hud" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_6fbih")

[node name="RootControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="RemnantIcons" type="Control" parent="RootControl"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
mouse_filter = 2

[node name="LeftRemnants" type="GridContainer" parent="RootControl/RemnantIcons"]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 1.0
offset_right = 916.0
offset_bottom = 89.0
columns = 8

[node name="RightRemnants" type="GridContainer" parent="RootControl/RemnantIcons"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0
columns = 8

[node name="TimeFabric" type="Control" parent="RootControl"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -58.0
offset_right = 58.0
offset_bottom = 100.0
grow_horizontal = 2
script = ExtResource("2_bjfho")
spritesheet = ExtResource("3_6fbih")

[node name="HBoxContainer" type="HBoxContainer" parent="RootControl/TimeFabric"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8

[node name="TextureRect" type="TextureRect" parent="RootControl/TimeFabric/HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = ExtResource("3_6fbih")

[node name="Label" type="Label" parent="RootControl/TimeFabric/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Num:"
label_settings = SubResource("LabelSettings_t1xeu")

[node name="Notification" type="VBoxContainer" parent="RootControl"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_right = 250.0
offset_bottom = 1372.0
grow_horizontal = 2
mouse_filter = 2

[node name="Spacer" type="Control" parent="RootControl/Notification"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
mouse_filter = 2

[node name="Noti" type="Control" parent="RootControl/Notification"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
mouse_filter = 2

[node name="Background Texture" type="TextureRect" parent="RootControl/Notification/Noti"]
layout_mode = 0
offset_right = 500.0
offset_bottom = 200.0
mouse_filter = 2
texture = ExtResource("2_gp50j")

[node name="RichTextLabel" type="RichTextLabel" parent="RootControl/Notification/Noti"]
layout_mode = 0
offset_top = 68.0
offset_right = 484.0
offset_bottom = 228.0
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "Wave 1 / 10"
fit_content = true
scroll_active = false
horizontal_alignment = 1

[node name="Left_Bottom_Corner" type="VBoxContainer" parent="RootControl"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 254.0
grow_vertical = 0

[node name="Combo" type="Control" parent="RootControl/Left_Bottom_Corner"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2

[node name="TextureProgressBar" type="TextureProgressBar" parent="RootControl/Left_Bottom_Corner/Combo"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -126.0
offset_bottom = -122.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
max_value = 3.0
step = 0.0
fill_mode = 5
texture_under = ExtResource("5_p8pfh")
texture_progress = ExtResource("6_gp50j")

[node name="Label" type="Label" parent="RootControl/Left_Bottom_Corner/Combo/TextureProgressBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -375.0
offset_top = -175.5
offset_right = 375.0
offset_bottom = 174.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.125, 0.125)
pivot_offset = Vector2(375, 175)
theme_override_font_sizes/font_size = 196
text = "3.0x"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CooldownBar" type="Control" parent="RootControl/Left_Bottom_Corner"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
script = ExtResource("5_kgqo6")

[node name="CooldownBar" type="TextureProgressBar" parent="RootControl/Left_Bottom_Corner/CooldownBar"]
material = SubResource("ShaderMaterial_sjf6p")
layout_mode = 1
offset_top = 1.0
offset_right = 20.0
offset_bottom = 15.0
scale = Vector2(4, 4)
max_value = 0.5
step = 0.005
value = 0.25
texture_under = ExtResource("9_gp50j")
texture_over = ExtResource("9_gp50j")
texture_progress = ExtResource("9_gp50j")
tint_under = Color(0.15294118, 0.15294118, 0.15294118, 1)
tint_over = Color(0.44313726, 0.44313726, 0.44313726, 0)
tint_progress = Color(0.7191348, 0.1524289, 0.9021915, 1)

[node name="HealthBar" parent="RootControl/Left_Bottom_Corner" instance=ExtResource("10_sjf6p")]
layout_mode = 2
theme = SubResource("Theme_gferk")

[node name="Right_Bottom_Corner" type="VBoxContainer" parent="RootControl"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -254.0
offset_top = -101.0
grow_horizontal = 0
grow_vertical = 0

[node name="Combo" type="Control" parent="RootControl/Right_Bottom_Corner"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2

[node name="TextureProgressBar" type="TextureProgressBar" parent="RootControl/Right_Bottom_Corner/Combo"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -126.0
offset_bottom = -122.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
max_value = 3.0
step = 0.0
fill_mode = 5
texture_under = ExtResource("5_p8pfh")
texture_progress = ExtResource("6_gp50j")

[node name="Label" type="Label" parent="RootControl/Right_Bottom_Corner/Combo/TextureProgressBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -375.0
offset_top = -175.5
offset_right = 375.0
offset_bottom = 174.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.125, 0.125)
pivot_offset = Vector2(375, 175)
theme_override_font_sizes/font_size = 196
text = "3.0x"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CooldownBar" type="Control" parent="RootControl/Right_Bottom_Corner"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
script = ExtResource("5_kgqo6")

[node name="CooldownBar" type="TextureProgressBar" parent="RootControl/Right_Bottom_Corner/CooldownBar"]
material = SubResource("ShaderMaterial_gp50j")
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = -1.0
offset_right = 18.0
offset_bottom = 13.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(-4, -4)
max_value = 0.5
step = 0.005
value = 0.25
texture_under = ExtResource("9_gp50j")
texture_over = ExtResource("9_gp50j")
texture_progress = ExtResource("9_gp50j")
tint_under = Color(0.15294118, 0.15294118, 0.15294118, 1)
tint_over = Color(0.44297108, 0.44297108, 0.44297108, 0)
tint_progress = Color(1, 0.64705884, 0, 1)

[node name="DebugMenu" type="Control" parent="RootControl"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="GridContainer" type="GridContainer" parent="RootControl/DebugMenu"]
layout_mode = 0
offset_left = 1708.0
offset_top = 34.0
offset_right = 1898.0
offset_bottom = 138.0

[node name="MenuIndicator" type="Label" parent="RootControl/DebugMenu/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.8980392, 0.22745098, 1)

[node name="Invulnerability" type="Label" parent="RootControl/DebugMenu/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.8980392, 0.22745098, 1)

[node name="Paths" type="Label" parent="RootControl/DebugMenu/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.8980392, 0.22745098, 1)

[node name="Clamping" type="Label" parent="RootControl/DebugMenu/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.8980392, 0.22745098, 1)
[node name="HealthBar" parent="RootControl/Right_Bottom_Corner" instance=ExtResource("10_sjf6p")]
layout_mode = 2
theme = SubResource("Theme_gp50j")
is_purple = false
flipped = true
